<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    <TableLayout android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
        <TableRow>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/targetAccountLabel"/>
        </TableRow>
        <TableRow>
            <EditText android:id="@+id/accountNameEditText"
                      android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/accountBillingStreetLabel"/>
        </TableRow>
        <TableRow>
            <EditText android:id="@+id/accountBillingStreetEditText"
                      android:layout_height="wrap_content"
                      android:layout_width="wrap_content" 
                      android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/accountBillingCityLabel"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow>
            <EditText android:id="@+id/accountBillingCityEditText"
                      android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/accountBillingStateLabel"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow>
            <EditText android:id="@+id/accountBillingStateEditText"
                      android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <Button android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:id="@+id/accountSaveButton"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"/>
        </TableRow>
    </TableLayout>
</ScrollView>
